Aggiunto tutte le card rimanenti

--- a/index.html
+++ b/index.html
@@ -25,6 +25,77 @@
                 <strong class="price2">29,99 €</strong>
             </div>
         </div>
+
+        <div class="card">
+            <img src="img/2.webp">
+            <div class="bar">
+                <div class="discount">-30%</div>
+            </div>
+            <div class="hearts">&hearts;</div>
+            <div>
+                <span>Guess</span>
+                <h4>ROSES TEE</h4>
+                <strong class="price">20,99 €</strong>
+                <strong class="price2">29,99 €</strong>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/3.webp">
+            <div class="bar">
+                <div class="discount">-30%</div>
+            </div>
+            <div class="hearts">&hearts;</div>
+            <div>
+                <span>Come Zucchero Filato</span>
+                <h4>VOGLIA DI COLORI PASTELLO</h4>
+                <strong class="price">129,99 €</strong>
+            </div>
+        </div>
+    
+    </div>
+
+    <div class="container">
+
+        <div class="card">
+            <img src="img/4.webp">
+            <div class="bar">
+                <div class="discount">-50%</div>
+                <div class="sostenibilita">Sostenibilità</div>
+            </div>
+            <div class="hearts">&hearts;</div>
+            <div>
+                <span>Levi's</span>
+                <h4>TEE UNISEX</h4>
+                <strong class="price">14,99 €</strong>
+                <strong class="price2">29,99 €</strong>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/5.webp">
+            <div class="bar">
+            </div>
+            <div class="hearts">&hearts;</div>
+            <div>
+                <span>Maya Deluxe</span>
+                <h4>STRIPE BODICE</h4>
+                <strong class="price">99,99 €</strong>
+            </div>
+        </div>
+
+        <div class="card">
+            <img src="img/6.webp">
+            <div class="bar">
+                <div class="sostenibilita">Sostenibilità</div>
+            </div>
+            <div class="hearts">&hearts;</div>
+            <div>
+                <span>Esprit</span>
+                <h4>MAGLIONE - BLACK</h4>
+                <strong class="price">29,99 €</strong>
+            </div>
+        </div>
     
     </div>
 
