--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
     <div class="container">
 
         <div class="card">
-            <img src="img/1.webp">
+            <img src="img/1b.webp">
+            <img class="visible" src="img/1.webp">
             <div class="bar">
                 <div class="discount">-50%</div>
                 <div class="sostenibilita">Sostenibilità</div>
@@ -27,7 +28,8 @@
         </div>
 
         <div class="card">
-            <img src="img/2.webp">
+            <img src="img/2b.webp">
+            <img class="visible" src="img/2.webp">
             <div class="bar">
                 <div class="discount">-30%</div>
             </div>
@@ -41,7 +43,8 @@
         </div>
 
         <div class="card">
-            <img src="img/3.webp">
+            <img src="img/3b.webp">
+            <img class="visible" src="img/3.webp">
             <div class="bar">
                 <div class="discount">-30%</div>
             </div>
@@ -58,7 +61,8 @@
     <div class="container">
 
         <div class="card">
-            <img src="img/4.webp">
+            <img src="img/4b.webp">
+            <img class="visible" src="img/4.webp">
             <div class="bar">
                 <div class="discount">-50%</div>
                 <div class="sostenibilita">Sostenibilità</div>
@@ -73,7 +77,8 @@
         </div>
 
         <div class="card">
-            <img src="img/5.webp">
+            <img src="img/5b.webp">
+            <img class="visible" src="img/5.webp">
             <div class="bar">
             </div>
             <div class="hearts">&hearts;</div>
@@ -85,7 +90,8 @@
         </div>
 
         <div class="card">
-            <img src="img/6.webp">
+            <img src="img/6b.webp">
+            <img class="visible" src="img/6.webp">
             <div class="bar">
                 <div class="sostenibilita">Sostenibilità</div>
             </div>
